Fix assert in rigid-warp-transform with flecibility set to 10.0

The assert happened becasuse the transofrmation tried to read from
infinite source position, which is not really a supported feature.

Now PaintDevicePolygonOp checks is the transformation is not too
small before actually performing it.

BUG:441826